--- a/build.xml
+++ b/build.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <!-- Rename this project to something relevant! -->
-<project name="rename-me" default="build">
+<project name="silvertwit" default="build">
 
 	<tstamp>
 		<format property="FULLDTIME" pattern="%Y%m%d%H%M%S" />
