--- a/build.xml
+++ b/build.xml
@@ -182,6 +182,7 @@ RemoveType .php .phtml .php3 .php4 .php5 .inc
 		<tar destfile="${build.output.dir}/${package.name}" compression="gzip">
 			<fileset dir="${project.basedir}">
 				<include name="**/**" />
+				<exclude name="silverstripe-cache/" />
 				<exclude name="assets/**" />
 				<exclude name="build/**" />
 				<exclude name="build.xml" />
@@ -217,6 +218,7 @@ RemoveType .php .phtml .php3 .php4 .php5 .inc
 		<tar destfile="${build.output.dir}/${phing-package.name}" compression="gzip" defaultexcludes="false">
 			<fileset dir="${project.basedir}">
 				<include name="**/**" />
+				<exclude name="silverstripe-cache/" />
 				<exclude name="build/archive/**" />
 				<exclude name="nbproject/**" />
 				<exclude name="**/.project" />
@@ -254,6 +256,7 @@ RemoveType .php .phtml .php3 .php4 .php5 .inc
 				<exclude name="assets/**" />
 				<exclude name="cms/**" />
 				<exclude name="framework/**" />
+				<exclude name="silverstripe-cache/" />
 			</fileset>
 		</tar>
 		<chmod file="${build.output.dir}/${update-package.name}" mode="0664" />
