--- a/build.xml
+++ b/build.xml
@@ -183,6 +183,7 @@ RemoveType .php .phtml .php3 .php4 .php5 .inc
 			<fileset dir="${project.basedir}">
 				<include name="**/**" />
 				<exclude name="silverstripe-cache/" />
+				<exclude name="sitemap.xml" />
 				<exclude name="assets/**" />
 				<exclude name="build/**" />
 				<exclude name="build.xml" />
@@ -240,6 +241,7 @@ RemoveType .php .phtml .php3 .php4 .php5 .inc
 			<fileset dir="${project.basedir}">
 				<include name="**/**" />
 				<exclude name="mysite/db.conf.php" />
+				<exclude name="sitemap.xml" />
 				<exclude name="mysite/local.conf.php" />
 				<exclude name="mysite/_config/local.yml" />
 				<exclude name="mysite/*.log" />
