--- a/build.xml
+++ b/build.xml
@@ -86,6 +86,22 @@ Other features
 		<ssmodules file="${modules.depends.file}" noninteractive="${ni_build}"/>
 	</target>
 
+	<target name="update-composer">
+		<if>
+			<available file="composer.json" />
+			<then>
+				<if>
+					<not><available file="composer.phar" /></not>
+					<then>
+						<exec command="curl -s http://getcomposer.org/installer | php" passthru="true" />
+					</then>
+				</if>
+
+				<exec command="php composer.phar install" passthru="true" />
+			</then>
+		</if>
+	</target>
+
 	<target name="create_modules_file" unless="modules_file_exists">
 		<copy file="${modules.depends.file}.default" tofile="${modules.depends.file}" />
 	</target>
@@ -159,7 +175,7 @@ RemoveType .php .phtml .php3 .php4 .php5 .inc
 		</copy>
 
 		<phingcall target="update_modules" />
-
+		<phingcall target="update-composer" />
 		<phingcall target="apply_patches" />
 
 		<!-- Trigger /dev/build for the new system -->
@@ -184,6 +200,7 @@ RemoveType .php .phtml .php3 .php4 .php5 .inc
 				<include name="**/**" />
 				<exclude name="silverstripe-cache/" />
 				<exclude name="sitemap.xml" />
+				<exclude name="google*.html" />
 				<exclude name="assets/**" />
 				<exclude name="build/**" />
 				<exclude name="build.xml" />
@@ -199,6 +216,7 @@ RemoveType .php .phtml .php3 .php4 .php5 .inc
 				<exclude name="**/.project" />
 				<exclude name="**/.buildpath" />
 				<exclude name="**/.settings" />
+				<exclude name="phpunit.*" />
 			</fileset>
 		</tar>
 	</target>
@@ -219,6 +237,8 @@ RemoveType .php .phtml .php3 .php4 .php5 .inc
 		<tar destfile="${build.output.dir}/${phing-package.name}" compression="gzip" defaultexcludes="false">
 			<fileset dir="${project.basedir}">
 				<include name="**/**" />
+				<exclude name="sitemap.xml" />
+				<exclude name="google*.html" />
 				<exclude name="silverstripe-cache/" />
 				<exclude name="build/archive/**" />
 				<exclude name="nbproject/**" />
@@ -240,8 +260,9 @@ RemoveType .php .phtml .php3 .php4 .php5 .inc
 		<tar destfile="${build.output.dir}/${update-package.name}" compression="gzip" includeemptydirs="false">
 			<fileset dir="${project.basedir}">
 				<include name="**/**" />
-				<exclude name="mysite/db.conf.php" />
 				<exclude name="sitemap.xml" />
+				<exclude name="google*.html" />
+				<exclude name="mysite/db.conf.php" />
 				<exclude name="mysite/local.conf.php" />
 				<exclude name="mysite/_config/local.yml" />
 				<exclude name="mysite/*.log" />
@@ -255,6 +276,7 @@ RemoveType .php .phtml .php3 .php4 .php5 .inc
 				<exclude name="**/.buildpath" />
 				<exclude name="**/.settings" />
 				<exclude name="**/.git/**" />
+				<exclude name="phpunit.*" />
 				<exclude name="assets/**" />
 				<exclude name="cms/**" />
 				<exclude name="framework/**" />
@@ -325,7 +347,7 @@ Deny from all
 		<mkdir dir="${testing.logdir}" />
 		<mkdir dir="assets" />
 		<!-- Copy the configs - done so that we can override the reporter type from an exernal source -->
-		<copy tofile="ssautesting/testing.conf.php" file="${testing.config}" overwrite="true">
+		<copy tofile="ssautesting/testing.conf.php" file="${testing.config}" overwrite="false">
 			<filterchain>
 				<expandproperties />
 			</filterchain>
